--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ l’imprimeur taille-doucier tourne à la main. </br>
 </section> <!-- fin .flexcontainer -->
   
   <!-- jQuery -->
-<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <!-- Swiper JS -->
 <script src="swiper.jquery.min.js"></script>
 <script src="swiper.jquery.teoVersion.js.css"></script>
